// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx props transform > should not work with array props 1`] = `
"function testFunction([prop1, prop2], otherProps) {
  return <div prop1={prop1} prop2={prop2}>{otherProps}</div>;
}"
`;

exports[`jsx props transform > should not work with not pattern props 1`] = `
"function testFunction(prop1, prop2) {
  return <div prop1={prop1} prop2={prop2} />;
}"
`;

exports[`jsx props transform > should replace function parameter with "props" 1`] = `
"function testFunction(__props) {
  return <div prop1={__propsprop1} prop2={__propsprop2} />;
}"
`;

exports[`jsx props transform > should replace function parameter with 'props' when it's an object 1`] = `
"function testFunction(__props, otherProps) {
  return <div prop1={__propsprop1} prop2={__propsprop2}>{otherProps}</div>;
}"
`;

exports[`jsx props transform > should work just rest props 1`] = `
"function testFunction(restProps) {
  return <div prop1={restProps.$prop1} prop2={restProps.prop2} rest={{
    ...restProps
  }} />;
}"
`;

exports[`jsx props transform > should work with array destructuring in object pattern 1`] = `
"function testFunction(__props) {
  return <div first={first} second={second} />;
}"
`;

exports[`jsx props transform > should work with arrow functions in class properties 1`] = `
"class TestClass {
  handler = __props => {
    return <div prop1={__propsprop1} prop2={__propsprop2} />;
  };
}"
`;

exports[`jsx props transform > should work with async functions 1`] = `
"async function testFunction(__props) {
  const result = await someAsyncOperation();
  return <div prop1={__propsprop1} prop2={__propsprop2} result={result} />;
}"
`;

exports[`jsx props transform > should work with async generator functions 1`] = `
"async function* testFunction(__props) {
  return <div prop2={__propsprop2} />;
}"
`;

exports[`jsx props transform > should work with class methods 1`] = `
"class TestClass {
  method({
    prop1,
    prop2
  }) {
    return <div prop1={prop1} prop2={prop2} />;
  }
}"
`;

exports[`jsx props transform > should work with complex nested patterns 1`] = `
"function testFunction(__props = {
  theme: 'light',
  settings: {}
}) {
  return <div name={__propsuser.name} primary={primary} others={others} theme={__propsuser.settings.theme} settings={otherSettings} />;
}"
`;

exports[`jsx props transform > should work with computed property names 1`] = `
"function testFunction(__props) {
  return <div prop={__propscomputedProp} />;
}"
`;

exports[`jsx props transform > should work with deep props 1`] = `
"function testFunction(__props) {
  return <div prop4={__propsprop1.prop2.prop3.prop4} prop5={__propsprop1.prop2.prop3.prop5} />;
}"
`;

exports[`jsx props transform > should work with default values 1`] = `
"function testFunction(__props = {
  prop1: 'default1',
  prop2: 42
}) {
  return <div prop1={__propsprop1} prop2={__propsprop2} />;
}"
`;

exports[`jsx props transform > should work with function parameters 1`] = `
"function testFunction(__props = {
  callback: () => {}
}) {
  return <button onClick={__propscallback}>Click me</button>;
}"
`;

exports[`jsx props transform > should work with generator functions 1`] = `
"function* testFunction({
  prop1,
  prop2
}) {
  yield <div prop1={prop1} />;
  yield <div prop2={prop2} />;
}"
`;

exports[`jsx props transform > should work with multiple parameters including object pattern 1`] = `
"function testFunction(first, {
  prop1,
  prop2
}, last) {
  return <div first={first} prop1={prop1} prop2={prop2} last={last} />;
}"
`;

exports[`jsx props transform > should work with nested destructuring and defaults 1`] = `
"function testFunction(__props = {
  name: 'John',
  age: 25,
  user: {}
}) {
  return <div name={__propsuser.name} age={__propsuser.age} />;
}"
`;

exports[`jsx props transform > should work with nested function declarations 1`] = `
"function outer() {
  function inner(__props) {
    return <div prop1={__propsprop1} prop2={__propsprop2} />;
  }
  return inner;
}"
`;

exports[`jsx props transform > should work with nested function declarations with rest props 1`] = `
"import { omitProps as _omitProps$ } from "essor";
function outer() {
  function inner(__props) {
    const restProps = _omitProps$(__props,, ["prop1", "prop2"]);
    return <div prop1={__propsprop1} prop2={__propsprop2} rest={{
      ...restProps
    }} />;
  }
  return inner;
}"
`;

exports[`jsx props transform > should work with object method shorthand 1`] = `
"const obj = {
  method({
    prop1,
    prop2
  }) {
    return <div prop1={prop1} prop2={prop2} />;
  }
};"
`;

exports[`jsx props transform > should work with rest pattern props 1`] = `
"import { omitProps as _omitProps$ } from "essor";
function testFunction(__props) {
  const restProps = _omitProps$(__props,, ["prop1", "prop2"]);
  return <div prop1={__propsprop1} prop2={__propsprop2} {...restProps} />;
}"
`;

exports[`jsx props transform > should work with rest value props 1`] = `
"import { omitProps as _omitProps$ } from "essor";
function testFunction(__props) {
  const restProps = _omitProps$(__props,, ["prop1", "prop2"]);
  return <div prop1={__propsprop1} prop2={__propsprop2} rest={{
    ...restProps
  }} />;
}"
`;
